[package]
name = "rust_esp32_std_dallas"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version="0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "0.40.1"
embedded-svc = "0.24"
embedded-hal = { version="0.2.7", features = ["unproven"] }

## IF CHANGED, DO NOT FORGET TO UPDATE ALSO IN ds18b20 package!!!
one-wire-bus = "0.1.1"
## my fork
#one-wire-bus = { path = "/home/conan/git/srbpavel/one_wire_bus", version = "0.2.0" }
#one-wire-bus = { git = "https://github.com/srbpavel/one_wire_bus", version = "0.2.0" }

#ds18b20 = "0.1.1"
## my fork
ds18b20 = { path = "/home/conan/git/srbpavel/ds18b20", version = "0.2.0" }
#ds18b20 = { git = "https://github.com/srbpavel/ds18b20", version = "0.2.0" }

log = "0.4"

[build-dependencies]
embuild = "0.31"
